--- a/package.json
+++ b/package.json
@@ -20,13 +20,24 @@
   },
   "browserify": {
     "transform": [
-      "require-globify",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ],
+      "bulkify",
       "envify"
     ]
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
+    "bulkify": "^1.4.2",
     "del": "^2.2.0",
     "envify": "^3.4.0",
     "eslint": "^2.7.0",
@@ -53,10 +64,12 @@
     "node-bourbon": "^4.2.3",
     "node-notifier": "^4.5.0",
     "node-sass": "^3.7.0",
-    "require-globify": "^1.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
     "yamljs": "^0.2.7"
+  },
+  "dependencies": {
+    "preact": "^6.0.2"
   }
 }
