--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -48,8 +48,13 @@
   #Dataset Page
   dataset-secondary-title: Issues or Notes
   dataset-projects-made: Projects Made With This Dataset
+  dataset-source: Source
+  dataset-dates: Dates
+  dataset-formats: Format
+  dataset-id: ID
   button-download: Download
   button-share: Share
+
 
   # Resources Page
   resources-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.
