--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "yamljs": "^0.2.7"
   },
   "dependencies": {
-    "fetch": "^1.1.0",
     "moment": "^2.15.0",
-    "preact": "^6.0.2"
+    "preact": "^6.0.2",
+    "whatwg-fetch": "^1.0.0"
   }
 }
