--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -51,6 +51,11 @@
   datasets-source: Source
   datasets-dates: Dates
   dataset-formats: Format
+  dataset-added: Added
+  dataset-maintainer: Maintainer
+  dataset-frequency: Update Frequency
+  dataset-keywords: Keywords
+  dataset-license: License
   dataset-id: ID
   button-download: Download
   button-share: Share
