Initial featured datasets work

--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -32,6 +32,7 @@
   homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
   homepage-usecase-link: View Site
   homepage-usecases-button: View All Use Cases
+  homepage-featured-source: Source
 
   # Datasets Page
   data-title: Available Data
