--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -48,8 +48,8 @@
   #Dataset Page
   dataset-secondary-title: Issues or Notes
   dataset-projects-made: Projects Made With This Dataset
-  datasets-source: Source
-  datasets-dates: Dates
+  dataset-source: Source
+  dataset-dates: Dates
   dataset-formats: Format
   dataset-id: ID
   button-download: Download
