--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -53,6 +53,7 @@
   dataset-dates: Dates
   dataset-formats: Format
   dataset-added: Added
+  dataset-added: Updated
   dataset-maintainer: Maintainer
   dataset-frequency: Update Frequency
   dataset-keywords: Keywords
