Hotfix missing dataset tag in fa.yml

--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -53,7 +53,7 @@
   dataset-dates: Dates
   dataset-formats: Format
   dataset-added: Added
-  dataset-added: Updated
+  dataset-updated: Updated
   dataset-maintainer: Maintainer
   dataset-frequency: Update Frequency
   dataset-keywords: Keywords
