--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -11,24 +11,23 @@
   sort: Sort by
   filter-title: Filter Datasets
   category-title: Category
-  format-title: Format
-  date-title: Date
-  source: Source
-  to: to
+  format-title: فرمت
+  date-title: تاریخ
+  source: منبع
+  to: به
 
   # footer
-  button-github: Find Us On Github
-  sign_up-title: Sign Up For Our Newsletter
-  newsletter-descript: Get updates on new and updated datasets.
+  button-github: ما را در گیت‌هاب پیدا کنید
+  sign_up-title: عضویت در خبرنامه
+  newsletter-descript:با عضویت در خبرنامه ما در جریان داده‌های جدید و به‌روز شده قرار بگیرید
 
   # buttons
-  button-api: View the API
-  button-submit: Submit
+  button-api: مشاهده ای‌پی‌آی
+  button-submit: ارسال
 
   # Home Page
-  homepage-title: Making Iranian Data Available to the Public
-  homepage-descript: Find clean, reliable data from housing to transportation. With our growing database, check back for updates or sign up for our newsletter, to see when new sets are added.
-  homepage-button: View All Datasets
+  homepage-title: دسترسی آسان به داده 
+  homepage-descript: داده‌های تمیز شده از بخش مسکن گرفته تا کشاورزی و جمعیت. به تدریج داده‌های بیشتری اضافه خواهند شد، مجددا به سایت ما سر بزنید یا در خبرنامه ما عضو شوید تا در جریان آخرین داده‌های به روز شده قرار بگیرید. 
   homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
   homepage-usecase-link: View Site
   homepage-usecases-button: View All Use Cases
