--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -1,7 +1,7 @@
 #nav
 - data: داده‌ها
   contact: تماس
-  use_cases: نمونه‌
+  use_cases: کاربرد داده‌
   resources: منابع
   developers: توسعه‌ دهندگان
   about: درباره
