--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -26,7 +26,7 @@
   button-submit: Submit
 
   # Home Page
-  homepage-title: Making Iranian Data Available to the Public
+  homepage-title: دسترسی آسان به داده
   homepage-descript: Find clean, reliable data from housing to transportation. With our growing database, check back for updates or sign up for our newsletter, to see when new sets are added.
   homepage-button: View All Datasets
   homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
