--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -35,7 +35,7 @@
   homepage-featured-source: Source
 
   # Datasets Page
-  data-title: Available Data
+  data-title: داده‌های در دسترس
   data-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
   button-apply: Apply
   button-cancel: Cancel
