--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -9,8 +9,8 @@
   # terms
   featured: Featured
   sort: Sort by
-  filter-title: Filter Datasets
-  category-title: Category
+  filter-title: فیلتر کردن داده
+  category-title: دسته‌بندی
   format-title: "فرمت"
   date-title: "تاریخ"
   source: "منبع"
@@ -29,7 +29,7 @@
   homepage-title: "دسترسی آسان به داده "
   homepage-descript: "داده‌های تمیز شده از بخش مسکن گرفته تا کشاورزی و جمعیت. به تدریج داده‌های بیشتری اضافه خواهند شد، مجددا به سایت ما سر بزنید یا در خبرنامه ما عضو شوید تا در جریان آخرین داده‌های به روز شده قرار بگیرید. "
   homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
-  homepage-button: View All Datasets
+  homepage-button: دیدن همه داده‌ها
   homepage-usecase-link: View Site
   homepage-usecases-button: View All Use Cases
   homepage-featured-source: Source
