--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -30,9 +30,9 @@
   homepage-descript: "داده‌های تمیز شده از بخش مسکن گرفته تا کشاورزی و جمعیت. به تدریج داده‌های بیشتری اضافه خواهند شد، مجددا به سایت ما سر بزنید یا در خبرنامه ما عضو شوید تا در جریان آخرین داده‌های به روز شده قرار بگیرید. "
   homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
   homepage-button: مشاهده همه داده‌ها
-  homepage-usecase-link: View Site
-  homepage-usecases-button: View All Use Cases
-  homepage-featured-source: Source
+  homepage-usecase-link: مشاهده سایت
+  homepage-usecases-button: مشاهده همه کاربردها
+  homepage-featured-source: منبع
 
   # Datasets Page
   data-title: داده‌های در دسترس
