--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -47,20 +47,20 @@
   next: بعدی
 
   #Dataset Page
-  dataset-secondary-title: Issues or Notes
-  dataset-projects-made: Projects Made With This Dataset
-  dataset-source: Source
-  dataset-dates: Dates
-  dataset-formats: Format
-  dataset-added: Added
-  dataset-updated: Updated
-  dataset-maintainer: Maintainer
-  dataset-frequency: Update Frequency
-  dataset-keywords: Keywords
-  dataset-license: License
+  dataset-secondary-title: مساله یا توضیح
+  dataset-projects-made: مطالب نوشته شده با استفاده از این داده‌ها
+  dataset-source: منبع 
+  dataset-dates: بازه زمانی
+  dataset-formats: فرمت
+  dataset-added: تاریخ اضافه شدن به وبسایت
+  dataset-updated: به روز شده در
+  dataset-maintainer: نگاه‌دارنده
+  dataset-frequency: گستره به روز رسانی
+  dataset-keywords: کلمات کلیدی
+  dataset-license: مجوز
   dataset-id: ID
-  button-download: Download
-  button-share: Share
+  button-download: بارگذاری
+  button-share: به اشتراک گذاری
 
   # Resources Page
   resources-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.
@@ -68,7 +68,7 @@
   select-category: Select a Category
 
   # About Page - Partners
-  partners-title: Partners
+  partners-title: شرکا
   partners-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh.
 
   # Contact Page
