--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -72,7 +72,7 @@
   partners-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh.
 
   # Contact Page
-  contact-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt.
+  contact-descript: 
   name: نام
   email: ایمیل
   subject: موضوع
