--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -91,9 +91,9 @@
   show-button: ارسال پروژه
 
   # How to Contribute - Developer page - black content block
-  contribute-title: How to Contribute
+  contribute-title: نحوه مشارکت
   contribute-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
-  contribute-button: View Github Issues
+  contribute-button: مشاهده مشکلات در گیت‌هاب
 
   # Get Involved - About page - black content block
   involved-title: Get Involved
