--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -96,9 +96,9 @@
   contribute-button: مشاهده مشکلات در گیت‌هاب
 
   # Get Involved - About page - black content block
-  involved-title: Get Involved
+  involved-title: به ما بپیوندید
   involved-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
-  involved-button: Contact Us
+  involved-button: تماس با ما
 
   # Methodology - Home page - black content block
   methodology-title: Our Methodology
