--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -27,7 +27,7 @@
 
   # Home Page
   homepage-title: "دسترسی آسان به داده "
-  homepage-descript: "داده‌های تمیز شده از بخش مسکن گرفته تا کشاورزی و جمعیت. به تدریج داده‌های بیشتری اضافه خواهند شد، مجددا به سایت ما سر بزنید یا در خبرنامه ما عضو شوید تا در جریان آخرین داده‌های به روز شده قرار بگیرید. "
+  homepage-descript: "داده‌های تمیز شده از بخش  بهداشت گرفته تا کشاروزی و جمعیت را در پایگاه داده باز ایران پیدا کنید. دیتابیس ما در حال رشد است، مجددا به سایت ما سر بزنید یا در خبرنامه ما عضو شوید تا در جریان آخرین داده‌هایی که به سایت اضافه می‌شوند قرار بگیرید.  "
   homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
   homepage-button: مشاهده همه داده‌ها
   homepage-usecase-link: مشاهده سایت
