--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -52,7 +52,7 @@
   dataset-secondary-title: Issues or Notes
   dataset-projects-made: Projects Made With This Dataset
   dataset-source: Source
-  dataset-dates: Dates
+  dataset-dates: Temporal coverage
   dataset-formats: Format
   dataset-id: ID
   dataset-added: Added
