--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -10,7 +10,7 @@
   featured: Featured
   sort: مرتب‌سازی بر اساس
   filter-title: فیلتر کردن داده
-  category-title: دسته‌بندی موضوعی
+  category-title: حوزه‌ها
   format-title: "فرمت"
   date-title: "تاریخ"
   source: "منبع"
