--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -28,7 +28,7 @@
   # Home Page
   homepage-title: "دسترسی آسان به داده "
   homepage-descript: "داده‌های تمیز شده از بخش  بهداشت گرفته تا کشاروزی و جمعیت را در پایگاه داده باز ایران پیدا کنید. دیتابیس ما در حال رشد است، مجددا به سایت سر بزنید یا در خبرنامه ما عضو شوید تا در جریان آخرین داده‌هایی که به سایت اضافه می‌شوند قرار بگیرید.  "
-  homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
+  homepage-usecases-descript: گزارش‌ها و مقاله‌هایی که با استفاده از داده‌های منتشر شده در پایگاه داده باز ایران تهیه شده‌اند را ببینید.  
   homepage-button: مشاهده همه داده‌ها
   homepage-usecase-link: مشاهده سایت
   homepage-usecases-button: مشاهده همه کاربردها
