--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -7,9 +7,9 @@
   about: "درباره"
 
   # terms
-  featured: Featured
-  sort: مرتب‌سازی بر اساس
-  filter-title: فیلتر کردن داده
+  featured: "Featured"
+  sort: "مرتب‌سازی بر اساس"
+  filter-title: "فیلتر کردن داده"
   category-title: حوزه‌ها
   format-title: "فرمت"
   date-title: "تاریخ"
@@ -28,80 +28,80 @@
   # Home Page
   homepage-title: "دسترسی آسان به داده "
   homepage-descript: "داده‌های تمیز شده از بخش  بهداشت گرفته تا کشاروزی و جمعیت را در پایگاه داده باز ایران پیدا کنید. دیتابیس ما در حال رشد است، مجددا به سایت سر بزنید یا در خبرنامه ما عضو شوید تا در جریان آخرین داده‌هایی که به سایت اضافه می‌شوند قرار بگیرید.  "
-  homepage-usecases-descript: در اینجا گزارش‌‌ها و مقاله‌هایی که با استفاده از داد‌های منتشر شده در پایگاه داده باز ایران تهیه شده‌اند را می‌بینید.  
-  homepage-button: مشاهده همه داده‌ها
-  homepage-usecase-link:ادامه
-  homepage-usecases-button: مشاهده همه کاربردها
-  homepage-featured-source: منبع
+  homepage-usecases-descript: "در اینجا گزارش‌‌ها و مقاله‌هایی که با استفاده از داد‌های منتشر شده در پایگاه داده باز ایران تهیه شده‌اند را می‌بینید." 
+  homepage-button: "مشاهده همه داده‌ها"
+  homepage-usecase-link: "ادامه"
+  homepage-usecases-button: "مشاهده همه کاربردها"
+  homepage-featured-source: "منبع"
 
   # Datasets Page
-  data-title: داده‌های در دسترس
-  data-descript: در این‌جا داده‌های در دسترس را می‌بینید. به تدریج داده‌های بیشتری اضافه می‌شود. مجددا به سایت ما سر بزنید. 
-  button-apply: اعمال
-  button-cancel: لغو
-  dataset-num-title1: نمایش
-  dataset-num-title2: داده
-  sortby-option1: داده‌های تازه اضافه شده
-  sortby-option2: به ترتیب الفبا
-  previous: قبلی
-  next: بعدی
+  data-title: "داده‌های در دسترس"
+  data-descript: "در این‌جا داده‌های در دسترس را می‌بینید. به تدریج داده‌های بیشتری اضافه می‌شود. مجددا به سایت ما سر بزنید."
+  button-apply: "اعمال"
+  button-cancel: "لغو"
+  dataset-num-title1: "نمایش"
+  dataset-num-title2: "داده"
+  sortby-option1: "داده‌های تازه اضافه شده"
+  sortby-option2: "به ترتیب الفبا"
+  previous: "قبلی"
+  next: "بعدی"
 
   #Dataset Page
-  dataset-secondary-title: مساله یا توضیح
-  dataset-projects-made: مطالب نوشته شده با استفاده از این داده‌ها
-  dataset-source: منبع 
-  dataset-dates: بازه زمانی
-  dataset-formats: فرمت
-  dataset-added: تاریخ اضافه شدن به وبسایت
-  dataset-updated: به روز شده در
-  dataset-maintainer: نگاه‌دارنده
-  dataset-frequency: گستره به روز رسانی
-  dataset-keywords: کلمات کلیدی
-  dataset-license: مجوز
-  dataset-id: ID
-  button-download: بارگذاری
-  button-share: به اشتراک گذاری
+  dataset-secondary-title: "مساله یا توضیح"
+  dataset-projects-made: "مطالب نوشته شده با استفاده از این داده‌ها"
+  dataset-source: "منبع"
+  dataset-dates: "بازه زمانی"
+  dataset-formats: "فرمت"
+  dataset-added: "تاریخ اضافه شدن به وبسایت"
+  dataset-updated: "به روز شده در"
+  dataset-maintainer: "نگاه‌دارنده"
+  dataset-frequency: "گستره به روز رسانی"
+  dataset-keywords: "کلمات کلیدی"
+  dataset-license: "مجوز"
+  dataset-id: "ID"
+  button-download: "بارگذاری"
+  button-share: "به اشتراک گذاری"
 
   # Resources Page
-  resources-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.
-  jump-to: Jump to
-  select-category: Select a Category
+  resources-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra."
+  jump-to: "Jump to"
+  select-category: "Select a Category"
 
   # About Page - Partners
-  partners-title: شرکا
-  partners-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh.
+  partners-title: "شرکا"
+  partners-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh."
 
   # Contact Page
   contact-descript: 
-  name: نام
-  email: ایمیل
-  subject: موضوع
-  message: پیام شما
-  other-ways: راه‌های دیگر تماس
-  github: گیت‌هاب
+  name: "نام"
+  email: "ایمیل"
+  subject: "موضوع"
+  message: "پیام شما"
+  other-ways: "راه‌های دیگر تماس"
+  github: "گیت‌هاب"
 
   # Suggest Dataset - data page - black content block
-  suggest-title: آنچه را که به دنبالش هستید پیدا نمی‌کنید؟
-  suggest-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
-  suggest-button: پیشنهاد داده بدهید 
+  suggest-title: "آنچه را که به دنبالش هستید پیدا نمی‌کنید؟"
+  suggest-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis."
+  suggest-button: "پیشنهاد داده بدهید"
 
   # Show Work - Use Cases page - black content block
-  show-title: کار خود را برای ما بفرستید
-  show-descript: پروژه‌ای دارید که با استفاده از داده‌های  پایگاه داده باز ایران ساخته‌اید؟ کارتان را برای ما بفرستید تا در سایت نمایش دهیم. 
-  show-button: ارسال پروژه
+  show-title: "کار خود را برای ما بفرستید"
+  show-descript: "پروژه‌ای دارید که با استفاده از داده‌های  پایگاه داده باز ایران ساخته‌اید؟ کارتان را برای ما بفرستید تا در سایت نمایش دهیم." 
+  show-button: "ارسال پروژه"
 
   # How to Contribute - Developer page - black content block
-  contribute-title: نحوه مشارکت
-  contribute-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
-  contribute-button: مشاهده مشکلات در گیت‌هاب
+  contribute-title: "نحوه مشارکت"
+  contribute-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam."
+  contribute-button: "مشاهده مشکلات در گیت‌هاب"
 
   # Get Involved - About page - black content block
-  involved-title: به ما بپیوندید
-  involved-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
-  involved-button: تماس با ما
+  involved-title: "به ما بپیوندید"
+  involved-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam."
+  involved-button: "تماس با ما"
 
   # Methodology - Home page - black content block
-  methodology-title: متدولوژی ما
-  methodology-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
-  methodology-button: بیشتر بخوانید
-  methodology-button2: مشارکت کنید
+  methodology-title: "متدولوژی ما"
+  methodology-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam."
+  methodology-button: "بیشتر بخوانید"
+  methodology-button2: "مشارکت کنید"
