--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -63,8 +63,8 @@
   button-share: به اشتراک گذاری
 
   # Resources Page
-  resources-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.
-  jump-to: Jump to
+  resources-descript: در اینجا منابع مرتبط با داده باز در ایران و سایر کشورها را معرفی می‌کنیم 
+  jump-to: رجوع به
   select-category: Select a Category
 
   # About Page - Partners
