--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -2,7 +2,7 @@
 - data: "داده‌ها"
   contact: "تماس"
   use_cases: "کاربرد داده‌"
-  resources: "منابع"
+  resources: "منبع‌ها"
   developers: "توسعه‌ دهندگان"
   about: "درباره ما"
 
