--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -63,9 +63,9 @@
   button-share: به اشتراک گذاری
 
   # Resources Page
-  resources-descript: در اینجا منابع مرتبط با داده باز در ایران و سایر کشورها را معرفی می‌کنیم 
+  resources-descript: در اینجا منابع مرتبط با داده باز در ایران و سایر کشورها را معرفی می‌کنیم. 
   jump-to: رجوع به
-  select-category: Select a Category
+  select-category: انتخاب گروه
 
   # About Page - Partners
   partners-title: شرکا
