--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -65,7 +65,7 @@
   # Resources Page
   resources-descript: در اینجا منابع مرتبط با داده باز در ایران و سایر کشورها را معرفی می‌کنیم 
   jump-to: رجوع به
-  select-category: Select a Category
+  select-category: انتخاب گروه
 
   # About Page - Partners
   partners-title: شرکا
