--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -105,7 +105,7 @@
 
   # Methodology - Home page - black content block
   methodology-title: Our Methodology
-  methodology-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
+  methodology-descript: The main feature of Iran Open Data is that its entire technology process and platform behind is publicly available on Github.
   methodology-button: Learn More
   methodology-button2: Contribute
 
