--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -72,7 +72,7 @@
 
   # About Page - Partners
   partners-title: Partners
-  partners-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh.
+  partners-descript: 
 
   # Contact Page
   contact-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt.
