--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -69,7 +69,7 @@
 
   # About Page - Partners
   partners-title: "شرکا"
-  partners-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh."
+  partners-descript: ""
 
   # Contact Page
   contact-descript: ""
