--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -29,7 +29,7 @@
   homepage-title: Making Iranian Data Available to the Public
   homepage-descript: Find clean, reliable data from housing to transportation. With our growing database, check back for updates or sign up for our newsletter, to see when new sets are added.
   homepage-button: View All Datasets
-  homepage-usecases-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.
+  homepage-usecases-descript: Here we feature projects that are based upon Iran Open Data's datasets.
   homepage-usecase-link: View Site
   homepage-usecases-button: View All Use Cases
   homepage-featured-source: Source
