--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -66,7 +66,7 @@
 
 
   # Resources Page
-  resources-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.
+  resources-descript: On this page we've gathered some resources relating to open data in Iran and around the world, as well as a number of training courses to help you work with our datasets.
   jump-to: Jump to
   select-category: Select a Category
 
