--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -63,7 +63,7 @@
   button-share: "به اشتراک گذاری"
 
   # Resources Page
-  resources-descript: "در اینجا منابع مرتبط با داده باز در ایران و سایر کشورها را معرفی می‌کنیم "
+  resources-descript: " در این بخش، منابعی مربوط به داده باز در ایران و سایر کشورها را جمع‌آوری کرده‌ایم. هم‌چنین برخی دوره‌های آموزشی که به کار با داده کمک می‌کند را نیز معرفی می‌کنیم. "
   jump-to: "رجوع به"
   select-category: "انتخاب گروه"
 
