--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -95,7 +95,7 @@
 
   # How to Contribute - Developer page - black content block
   contribute-title: How to Contribute
-  contribute-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
+  contribute-descript:  If you are a developer and would like to help us write ingest codes, please do get in touch!
   contribute-button: View Github Issues
 
   # Get Involved - About page - black content block
