--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -101,7 +101,8 @@
   # Get Involved - About page - black content block
   involved-title: Get Involved
   involved-descript: There are a number of different ways you can get involved in the project: publish your datasets, suggest datasets, write ingest codes or sponsor us for more information! 
-
+  involved-button: Contact Us
+  
   # Methodology - Home page - black content block
   methodology-title: Our Methodology
   methodology-descript: An open data platform should itself be open. A defining feature of Iran Open Data is that all of its technology processes, and the architecture of the platform are publicly available on Github
