--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -68,7 +68,7 @@
   select-category: "انتخاب گروه"
 
   # About Page - Partners
-  partners-title: "شرکا"
+  partners-title: "حامیان"
   partners-descript: ""
 
   # Contact Page
