--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -41,6 +41,8 @@
   button-cancel: "لغو"
   dataset-num-title1: "نمایش"
   dataset-num-title2: "داده"
+  datasets-source: Source
+  datasets-updated: Updated
   sortby-option1: "داده‌های تازه اضافه شده"
   sortby-option2: "به ترتیب الفبا"
   previous: "قبلی"
