--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -7,7 +7,7 @@
   about: "درباره ما"
 
   # terms
-  featured: "Featured"
+  featured: "برگزیده"
   sort: "مرتب‌سازی بر اساس"
   filter-title: "فیلتر کردن داده"
   category-title: "حوزه‌ها"
