all farsi text throughout

--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -16,6 +16,8 @@
   date-title: Date
   source: Source
   to: to
+  showing: Showing
+  datasets: Datasets
 
   # footer
   button-github: Find Us On Github
