Hide 'usecases' when there are none
* Usecases tab hidden from navbar when there are no use cases in
that language
* Translating use cases from one to the other by clicking on the
language header will display a message "There are no use cases"

--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -18,6 +18,7 @@
   to: to
   showing: Showing
   datasets: Datasets
+  no_use_cases: "There are currently no English use cases available."
 
   # footer
   button-github: Find Us On Github
