--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -98,7 +98,7 @@
 
   # How to Contribute - Developer page - black content block
   contribute-title: "نحوه مشارکت"
-  contribute-descript: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam."
+  contribute-descript: "اگر توسعه‌دهنده وب هستید و علاقه‌مندید در تمیزکاری داده از طریق کد نویسی (wrting ingest codes) به ما کمک کنید، لطفا با ما تماس بگیرید!‌"
   contribute-button: "مشاهده مشکلات در گیت‌هاب"
 
   # Get Involved - About page - black content block
