--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -70,7 +70,7 @@
 
 
   # Resources Page
-  resources-descript: On this page we've gathered some resources relating to open data in Iran and around the world, as well as a number of training courses to help you work with our datasets.
+  resources-descript: On this page we've collected an array of resources relating to open data in Iran and around the world. Check out the training courses below to help you work with our datasets, and read all about the history of the open data movement.
   jump-to: Jump to
   select-category: Select a Category
 
