--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -31,7 +31,7 @@
 
   # Home Page
   homepage-title: Making Iranian Data Publicly Available
-  homepage-descript: Discover clean and reliable public data on topics ranging from housing to heath, and from trade to transportation. Check back with our growing database frequently for our latest datasets, or sign up to our newsletter for alerts as new data becomes available.
+  homepage-descript: Discover clean and reliable public data on topics ranging from housing to health, and from trade to transportation. Check back with our growing database frequently for our latest datasets, or sign up to our newsletter for alerts as new data becomes available.
   homepage-button: View All Datasets
   homepage-usecases-descript: Here we feature projects that are based upon Iran Open Data's datasets.
   homepage-usecase-link: View Site
