--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -105,7 +105,12 @@
 
   # Get Involved - About page - black content block
   involved-title: Get Involved
-  involved-descript: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam.
+  involved-descript: There are a number of different ways you can get involved in the project:
+
+Publish your datasets: If you have clean datasets that you would like to publish, you can send them to us! Please also send along a written methodology explaining how you cleaned the data.
+Suggest datasets: If you are looking for datasets that you think should be on Iran Open Data, please suggest them to us. We will add it to our todo list.
+Write ingest codes: If you’re a developer and would like to help us write ingest codes, please do get in touch!
+Sponsor us: Iran Open Data is currently sponsored by Small Media Foundation. We would like to expand our financial sponsors. Please get in touch with us if you can help!
   involved-button: Contact Us
 
   # Methodology - Home page - black content block
