--- a/app/_data/en.yml
+++ b/app/_data/en.yml
@@ -53,7 +53,7 @@
   next: Next
 
   #Dataset Page
-  dataset-secondary-title: Issues or Notes
+  dataset-secondary-title: Notes
   dataset-projects-made: Projects Made With This Dataset
   dataset-source: Source
   dataset-dates: Temporal coverage
