--- a/app/_data/fa.yml
+++ b/app/_data/fa.yml
@@ -51,7 +51,7 @@
   next: "بعدی"
 
   #Dataset Page
-  dataset-secondary-title: "مساله یا توضیح"
+  dataset-secondary-title: "توضیحات"
   dataset-projects-made: "مطالب نوشته شده با استفاده از این داده‌ها"
   dataset-source: "منبع "
   dataset-dates: "بازه زمانی"
